--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.jpa.hibernate.ddl-auto=none
 
 spring.jpa.database=postgresql
 spring.datasource.url=jdbc:postgresql://localhost:5432/dev
-spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.username=postgres
+spring.datasource.password=postgres
